monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4162/A4162.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4162;

grammar A4162  {

  P = "a" un:"b" "c"* cg:["cg"];

  replacekeyword "a" : "a", "aa";
  replacekeyword "c" : "c", "cc";

  replacekeyword "cg" : "cg", "cgg";

}